se guardo todo lo hecho, hay que comprobar el codigo entero

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "open",
-    "cypress:run:all": "npx cypress run --e2e --browser chorme --spec cypress/e2e/1-eden"
+    "cypress:run:all": "npx cypress run --e2e --browser chrome --spec cypress/e2e/1-eden",
+    "cypress:run:regression": "npx cypress run --e2e --browser chrome --env grepTags=@regression --spec cypress/e2e/1-eden/eden.cy.js",
+    "cypress:open:mobile": "npx cypress open --e2e --browser firefox -e type=mobile"
   },
   "keywords": [
     "cypress",
@@ -16,7 +18,9 @@
   "author": "Geronimo",
   "license": "ISC",
   "dependencies": {
+    "@bahmutov/cy-grep": "^1.9.16",
     "ajv": "^8.12.0",
-    "cypress": "^12.17.2"
+    "cypress": "^12.17.2",
+    "cypress-mochawesome-reporter": "^3.5.1"
   }
 }
